Initial implementation of constant delay functions